--- a/templates/home/profile_base.html
+++ b/templates/home/profile_base.html
@@ -95,7 +95,10 @@
                 </li>
               </ul>
             </li>
-            <li class="mt-1 mx-3" style="padding-left: 650px">
+            <li style="margin-left:600px;margin-top:10px">
+                  <i class="fas fa-bell " style="font-size:30px"></i>
+                </li>
+            <li class="mt-1 mx-3" style="padding-left: 10px">
               <a
                 href="http://localhost:8000/search"
                 style="color: aliceblue; text-decoration: none"
