--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -5,7 +5,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -14,8 +17,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'home/css/home.css' %}" />
-    {% block css_links %}
-    {% endblock css_links %}
+    {% block css_links %} {% endblock css_links %}
     <title>{% block title %} {% endblock title %}</title>
   </head>
   <body>
@@ -36,7 +38,7 @@
       <div class="container-fluid navi">
         <a class="navbar-brand" href="http://localhost:8000/home"
           ><p class="display-3" style="font-size: 30px; margin: 10px">
-            <b style="color: aliceblue;">SocialHub</b>
+            <b style="color: aliceblue">SocialHub</b>
           </p>
           <p></p
         ></a>
@@ -59,12 +61,14 @@
                 style="font-size: 20px"
                 aria-current="page"
                 href="http://localhost:8000/home"
-                ><b style="color: aliceblue;">Home</b></a
+                ><b style="color: aliceblue">Home</b></a
               >
             </li>
-          <li class="nav-item display-3  mx-3" style="font-size:20px;">
-          <a class="nav-link active" href="home/add_post/"><b style="color: aliceblue;">Post</b></a>
-          </li>
+            <li class="nav-item display-3 mx-3" style="font-size: 20px">
+              <a class="nav-link active" href="home/add_post/"
+                ><b style="color: aliceblue">Post</b></a
+              >
+            </li>
             <li class="nav-item dropdown active">
               <a
                 class="nav-link dropdown-toggle display-3"
@@ -73,34 +77,65 @@
                 role="button"
                 data-toggle="dropdown"
                 aria-expanded="false"
-                style="font-size: 20px;color: aliceblue;;"
+                style="font-size: 20px; color: aliceblue ;"
               >
-                <div id="usnm"><b style="color: aliceblue;">{% block user_name %}{% endblock user_name %}</b></div>
+                <div id="usnm">
+                  <b style="color: aliceblue"
+                    >{% block user_name %}{% endblock user_name %}</b
+                  >
+                </div>
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" style="" href="http://localhost:8000/home/profile">Profile</a></li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    style=""
+                    href="http://localhost:8000/home/profile"
+                    >Profile</a
+                  >
+                </li>
                 <li><a class="dropdown-item" href="#">Post a photo</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="http://localhost:8000/home/logout">Logout</a>
+                  <a
+                    class="dropdown-item"
+                    href="http://localhost:8000/home/logout"
+                    >Logout</a
+                  >
                 </li>
-              </ul>
-            </li>
-            <li class="mt-1 mx-3" style="padding-left:650px;">
-              <a href="http://localhost:8000/search" style="color: aliceblue;text-decoration: none;">
-              <div style="border: 2px solid white; border-radius: 20px;"><div style="padding-top: 5px;padding-left: 10px;padding-bottom: 5px;padding-right: 20px;"><b style="font-size: 18px;">Search</b>
-                <i class="fa fa-search mx-3"  aria-hidden="true"></i>
-                </div>
                 
-              </div>
-            </a>
-              </li>
+              </ul>
+              <li style="margin-left:600px;margin-top:10px">
+                  <i class="fas fa-bell " style="font-size:30px"></i>
+                </li>
+            </li>
+            
+            <li class="mt-1 mx-3" style="padding-left: 20px">
+              <a
+                href="http://localhost:8000/search"
+                style="color: aliceblue; text-decoration: none"
+              >
+                <div style="border: 2px solid white; border-radius: 20px">
+                  <div
+                    style="
+                      padding-top: 5px;
+                      padding-left: 10px;
+                      padding-bottom: 5px;
+                      padding-right: 20px;
+                    "
+                  >
+                    <b style="font-size: 18px">Search</b>
+                    <i class="fa fa-search mx-3" aria-hidden="true"></i>
+                  </div>
+                </div>
+              </a>
+            </li>
+
           </ul>
-          
         </div>
       </div>
     </nav>
-  
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <div class="row">
@@ -118,7 +153,7 @@
       src="https://kit.fontawesome.com/c939899435.js"
       crossorigin="anonymous"
     ></script>
-    
+
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
       integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
