--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -2,6 +2,7 @@
 
 <div class="container" style="font-family:'Roboto'">
   {% comment %} {{posts}} {% endcomment %}
+  {% if posts %}
   {% for i in posts %}
   <div class="card cont" id="pid{{i.post_id}}" style="margin-top: 20px;margin-bottom: 20px;background-color: #fafafa;width: 570px">
     <div class="row" style="height: 60px; padding: 10px">
@@ -94,6 +95,19 @@
     </form>
   </div>
   {% endfor %}
+  {% else %}
+  <div class="card text-center mt-3">
+  <div class="card-header" style="background-color:#353839;color:white">Sorry No feed yet</div>
+  <div class="card-body" style="background-color:#4a4a4a;color:white">
+    <h5 class="card-title">Follow your favourite friends and Stars to get the feed</h5>
+    <p class="card-text">
+      You would surely love it try using SocialHub expanding your engagement and expand your business with us
+    </p>
+    <a href="http://localhost:8000/search" class="btn" style="background-color:pink;color:black">Search your friends</a>
+  </div>
+  <div style="background-color:#353839;" class="card-footer text-muted"><p style="color:white;height:7px">Today</p></div>
+</div>
+  {% endif %}
   
 </div>
 {% endblock feed %} {% block user_name %} {{name}} {% endblock user_name %}
