--- a/templates/home/show_users.html
+++ b/templates/home/show_users.html
@@ -24,6 +24,8 @@
       src="https://kit.fontawesome.com/c939899435.js"
       crossorigin="anonymous"
     ></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
     <title>Profile:{{user.get_username}}</title>
   </head>
   <body>
@@ -75,7 +77,7 @@
                 style="font-size: 20px; color: aliceblue ;"
               >
                 <div id="usnm">
-                  <b style="color: aliceblue">{{user.get_username}}</b>
+                  <b style="color: aliceblue" id="loginuser">{{user.get_username}}</b>
                 </div>
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -136,7 +138,7 @@
         </div>
 
         <div class="user-profile-data">
-          <h1>{{cur_user}}</h1>
+          <h1 id="cur_user">{{cur_user}}</h1>
 
           {% if bio %}
           <p><i>{{bio}}</i></p>
@@ -184,15 +186,10 @@
         {% endif %}
       </div>
     </div>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
