--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -21,7 +21,7 @@
 <hr>
 <h2 class="gradient-text">See what's trending</h2>
 <div class="row">
-{% if famous %}
+{% if posts %}
 {% for famous in posts %}
   
   <div class="col">
