--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,10 +1,17 @@
 {% extends 'home/base.html' %} {% block feed %}
 
-<div class="container" style="font-family:'Roboto'">
-  {% comment %} {{posts}} {% endcomment %}
-  {% if posts %}
-  {% for i in posts %}
-  <div class="card cont" id="pid{{i.post_id}}" style="margin-top: 20px;margin-bottom: 20px;background-color: #fafafa;width: 570px">
+<div class="container" style="font-family: 'Roboto'">
+  {% comment %} {{posts}} {% endcomment %} {% if posts %} {% for i in posts %}
+  <div
+    class="card cont"
+    id="pid{{i.post_id}}"
+    style="
+      margin-top: 20px;
+      margin-bottom: 20px;
+      background-color: #fafafa;
+      width: 570px;
+    "
+  >
     <div class="row" style="height: 60px; padding: 10px">
       <div class="col-1">
         <img
@@ -37,12 +44,11 @@
             <div class="heart col-1">
               <i
                 id="heart{{i.post_id}}"
-                {% if i.isliked %}
-                  class="heart_target fas fa-heart fa-lg"
-                {% else %}
-                  class="heart_target far fa-heart fa-lg"
-                {% endif %}
-                
+                {%if i.isliked%}
+                class="heart_target fas fa-heart fa-lg"
+                {%else%}
+                class="heart_target far fa-heart fa-lg"
+                {%endif%}
               ></i>
             </div>
             <div class="comment col-1 fa-lg" id="post{{i.post_id}}">
@@ -51,25 +57,18 @@
           </div>
         </div>
         <div class="row-2">Liked By <b>{{i.likedby}}</b></div>
-        <div class="caption row-2">
-          {{i.caption}}
-        </div>
+        <div class="caption row-2">{{i.caption}}</div>
         <div class="commentsslide row-2" id="comment{{i.post_id}}">
           <ul class="list-group" id="commentlist{{i.post_id}}">
-            
-            {% if i.comments %}
-              {% for comment in i.comments %}
-            
+            {% if i.comments %} {% for comment in i.comments %}
 
             <li class="list-group-item">
-              <p style="margin-top:3px;margin-bottom:3px"><b>{{comment.name}}</b> {{comment.comment}}</p>
+              <p style="margin-top: 3px; margin-bottom: 3px">
+                <b>{{comment.name}}</b> {{comment.comment}}
+              </p>
             </li>
-            {% endfor %}
-              
-            
-            {% endif %}
+            {% endfor %} {% endif %}
           </ul>
-         
         </div>
       </div>
     </div>
@@ -94,22 +93,106 @@
       </div>
     </form>
   </div>
-  {% endfor %}
-  {% else %}
+  {% endfor %} {% else %}
   <div class="card text-center mt-3">
-  <div class="card-header" style="background-color:#353839;color:white">Sorry No feed yet</div>
-  <div class="card-body" style="background-color:#4a4a4a;color:white">
-    <h5 class="card-title">Follow your favourite friends and Stars to get the feed</h5>
-    <p class="card-text">
-      You would surely love it try using SocialHub expanding your engagement and expand your business with us
-    </p>
-    <a href="http://localhost:8000/search" class="btn" style="background-color:pink;color:black">Search your friends</a>
+    <div class="card-header" style="background-color: #353839; color: white">
+      Sorry No feed yet
+    </div>
+    <div class="card-body" style="background-color: #4a4a4a; color: white">
+      <h5 class="card-title">
+        Follow your favourite friends and Stars to get the feed
+      </h5>
+      <p class="card-text">
+        You would surely love it try using SocialHub expanding your engagement
+        and expand your business with us
+      </p>
+      <a
+        href="http://localhost:8000/search"
+        class="btn"
+        style="background-color: pink; color: black"
+        >Search your friends</a
+      >
+    </div>
+    <div style="background-color: #353839" class="card-footer text-muted">
+      <p style="color: white; height: 7px">Today</p>
+    </div>
   </div>
-  <div style="background-color:#353839;" class="card-footer text-muted"><p style="color:white;height:7px">Today</p></div>
-</div>
   {% endif %}
-  
 </div>
-{% endblock feed %} {% block user_name %} {{name}} {% endblock user_name %}
-{% block title %}Home
-{% endblock title %}
+{% endblock feed %} {% block user_name %} {{name}} {% endblock user_name %} {%block title %}Home {% endblock title %} 
+
+
+
+
+
+
+{% block sugg %} 
+<div class="col">
+
+{% if notif %}
+<div class="card mt-3 row" style="width: 19rem;padding-right:20px">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item bg-dark" style="color:white"><b>Notifications</b><button class="btn btn-light mx-3 rounded-circle" style="width:33px;height:33px;color:white;background-color:#c13584;border:1px solid #c13584">5</button></li>
+    
+  
+  {% for notification in notif %}
+  
+    <li class="list-group-item">
+    <div>
+      <b>Title</b>
+      <p>{{notification}}</p>
+    </div>
+    
+    </li>
+
+  {% endfor %}
+  </ul>
+  <div class="card-footer">
+    Notifications get updated on activity and gets deleted after one day
+  </div>
+</div>
+</div>
+{% else %} nonotifs {% endif %}
+
+
+
+
+
+{% if pendings %}
+<div class="card mt-3 row" style="width: 19rem;padding-right:20px">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item " style="color:black;background-color:#b8b8b8"><b>Follow Request</b><button class="btn btn-light mx-3 rounded-circle" style="width:33px;height:33px;color:white;background-color:#c13584;border:1px solid #c13584">5</button></li>
+    
+  
+  {% for fr in pendings %}
+  
+    <li class="list-group-item">
+    <div>
+      <b>{{fr.sender_name}} started following you</b>
+      <div class="row">
+      
+        <div class="col-6">
+          <button class="btn btn-success">Confirm</button>
+        </div>
+        <div class="col-6">
+          <button class="btn btn-danger">Delete</button>
+        </div>
+       
+      </div>
+    </div>  
+    </li>
+  
+  {% endfor %}
+  </ul>
+  <div class="card-footer">
+    Most recent requests appear on the top
+  </div>
+</div>
+</div>
+{% else %} No FR {% endif %}
+
+
+
+
+</div>
+ {% endblock sugg %}
