--- a/templates/login/base.html
+++ b/templates/login/base.html
@@ -29,7 +29,7 @@
       {% csrf_token %}
       <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
       <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
-      <input type="submit" class="fadeIn fourth" value="Log In">
+      <input type="submit" class="fadeIn fourth" value="Log In" id="sub_btn">
     </form>
 
     <!-- Remind Passowrd -->
