--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -49,7 +49,7 @@
             <a class="nav-link dropdown-toggle display-3" href="#" id="navbarDropdown" role="button"
               data-toggle="dropdown" aria-expanded="false" style="font-size: 20px; color: aliceblue ;">
               <div id="usnm">
-                <b style="color: aliceblue">{% block user_name %}{% endblock user_name %}</b>
+                <b style="color: aliceblue" id="loginuser">{% block user_name %}{% endblock user_name %}</b>
               </div>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
