--- a/templates/home/show_followers.html
+++ b/templates/home/show_followers.html
@@ -5,21 +5,21 @@
 <table class="table table-dark table-hover mt-3">
     <thead>
         <tr>
-            <th scope="col" class="display-3" style="font-size: 30px;"> Followers of <b style="color: #ed5c7e;">{{cur_user}}</b></th>
+            <th scope="col" class="display-3 rounded" style="font-size: 30px;"> Followers of <b style="color: #ed5c7e;">{{cur_user}}</b></th>
             
         </tr>
   </thead>
 
     {% for f in friend %}
-        <tr>
+        <tr >
 
-            <td class="table-dark">
+            <td class="table-dark rounded" >
                 <div class="row">
                     <div class="col-2">
                         <img src="{{f.image}}" style="width: 80px; height: 80px;" class="rounded-circle">
                     </div>
                     <div class="col-10 mt-4 display-3">
-                        <p style="font-size: 20px;"><b>{{f.username}}</b></p>
+                        <p style="font-size: 20px;"><a href="{% url 'users' slug=f.username %}"><b>{{f.username}}</b></a></p>
                     </div>
                 </div>
             </td>
