--- a/templates/ViewPost/index.html
+++ b/templates/ViewPost/index.html
@@ -6,17 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous">
 
     <title>Hello, world!</title>
   </head>
+
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-9">
+          <img src="{{photo_url}}" style="width: 800px; height: 600px;
+            object-fit: cover;">
+        </div>
+        <div class="col-3" style="border: 2px solid black">
+          <div class="col">
+            <div class="row-1 mt-2" >
+              <b style="font-size: 25px; color: #ed428a;">{{owner}}</b>
+            </div>
+            <hr>
+            <div class="row-8" style="max-height: 470px; height:
+              500px; overflow: scroll; ">
+              {% if comments %}
+              <b style="font-size: 30px;;">Comments:</b>
+              <ul class="list-group">
+                {% for c in comments %}
+                <li class="list-group-item border border-3" style="width: 230px; font-size:
+                  15px;">
+                  <div class="col" >
+                    <div class="row-2">
+                      <a href="{% url 'users' slug=c.commentor%}" style="text-decoration: none"><b>{{c.commentor}}:</b></a>
+                    </div>
+                    <div class="row-8" style="word-wrap: break-word">
+                      {{c.msg}}
+                    </div>
+                  </div>
+                </li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+            </div>
+
+            <hr>
+            <div class="row-3">
+              <b>Liked By:</b>
+              {{likes}}
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
