Chat home page developed

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -56,7 +56,7 @@
               <li>
                 <a class="dropdown-item" style="" href="http://localhost:8000/home/profile">Profile</a>
               </li>
-              <li><a class="dropdown-item" href="#">Post a photo</a></li>
+              <li><a class="dropdown-item" href="{% url 'chat_home' %}">Chat</a></li>
               <li>
                 <hr class="dropdown-divider" />
               </li>
