Forgot password added

--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -30,6 +30,7 @@
   <b> {{ msg }} </b>
 </div> {% endfor %}{% endif %}
       <input type="text" id="login" class="fadeIn second" name="username" placeholder="User Name">
+      <input type="text" id="login" class="fadeIn second" name="email" placeholder="Email">
       <input type="text" id="login" class="fadeIn second" name="city" placeholder="City">
       <input type="text" id="login" class="fadeIn second" name="country" placeholder="Country">
       <input type="text" id="login" class="fadeIn second" name="bio" placeholder="Bio">
