--- a/templates/login/base.html
+++ b/templates/login/base.html
@@ -38,7 +38,7 @@
       <a class="underlineHover signup" href="{% url 'signup' %}"> <b>SIGN UP</b></a>
     </div>
     <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
+      <a class="underlineHover" href="{% url 'forgot_password' %}">Forgot Password?</a>
     </div>
 
   </div>
